--- a/assets/index.html
+++ b/assets/index.html
@@ -16,13 +16,14 @@
         <section class="conteudo">
             <div class="div-mensagem">
                 <h3 id="mensagem">...</h3>
+                <h4 id="mensagem-horario">...</h4>
             </div>
             <div>
-                <img id="imagem" src="../img/fotomanha.png" alt="Foto manhã">
+                <img id="imagem" src="../img/fototarde.png" alt="Foto manhã">
             </div>
         </section>
 
-        <footer>
+        <footer id="footer">
             <p>&copy; lucascastro621</p>
         </footer>
     </section>
